@@ -1,3 +1,8 @@
+2003-04-30  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* macosx/tkMacOSXButton.c (TkpDisplayButton): correct typo for
+	stippleGC [Bug #730124].
+
 2003-04-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tkButton.h:                         Rewrote the handling
